2016-04-15  Jakub Jelinek  <jakub@redhat.com>

	PR c++/69517
	PR c++/70019
	PR c++/70588
	* g++.dg/cpp1y/vla11.C: Revert for real.

	PR c/70436
	* c-c++-common/Wparentheses-1.c: New test.
	* c-c++-common/gomp/Wparentheses-1.c: New test.
	* c-c++-common/gomp/Wparentheses-2.c: New test.
	* c-c++-common/gomp/Wparentheses-3.c: New test.
	* c-c++-common/gomp/Wparentheses-4.c: New test.
	* c-c++-common/cilk-plus/PS/Wparentheses-1.c: New test.
	* c-c++-common/cilk-plus/CK/Wparentheses-1.c: New test.
	* c-c++-common/goacc/Wparentheses-1.c: New test.

2016-04-15  Kirill Yukhin  <kirill.yukhin@intel.com>

	PR target/70662
	* gcc.target/i386/pr70662.c: New test.

2016-04-15  Richard Biener  <rguenther@suse.de>
	    Alan Modra  <amodra@gmail.com>

	PR tree-optimization/70130
	* gcc.dg/vect/O3-pr70130.c: New testcase.

2016-04-14  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/70669
	* gcc.target/powerpc/pr70669.c: New test.

	PR target/70640
	* gcc.target/powerpc/pr70640.c: Fix test so it correctly works on
	a power7 system that does not have an assembler that supports
	power8.

2016-04-14  Martin Sebor  <msebor@redhat.com>

	PR c++/69517
	PR c++/70019
	PR c++/70588
	* c-c++-common/ubsan/vla-1.c: Revert.
	* g++.dg/cpp1y/vla11.C: Same.
	* g++.dg/cpp1y/vla12.C: Same.
	* g++.dg/cpp1y/vla13.C: Same.
	* g++.dg/cpp1y/vla14.C: Same.
	* g++.dg/cpp1y/vla3.C: Same.
	* gcc/testsuite/g++.dg/init/array24.C: Same.
	* g++.dg/ubsan/vla-1.C: Same.

2016-04-14  Marek Polacek  <polacek@redhat.com>
	    Jan Hubicka  <hubicka@ucw.cz>

	PR c++/70029
	* g++.dg/torture/pr70029.C: New test.

2016-04-14  Martin Sebor  <msebor@redhat.com>

	* g++.dg/cpp1y/vla11.C: Avoid using attribute aligned to increase
	type size to prevent failures on targets with very low maximum
	alignment.

2016-04-14  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/70623
	* gcc.dg/torture/pr70623.c: New testcase.
	* gcc.dg/torture/pr70623-2.c: Likewise.

2016-04-13  Martin Sebor  <msebor@redhat.com>
